# ats-reader

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ats_reader/: __init__.py  __main__.py  cli.py  extractor.py  models.py  output.py  parser_docx.py  parser_pdf.py  structure.py  warnings.py
